2011-11-28 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	Returns all messages to the caller.

2011-11-27 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-gtk-utils.c (base_gtk_utils_restore_window_position):
	Limit the window size, maximizing with the screen size.

	* nact/nact-tree-view.h:
	* nact/nact-tree-view.c: Define parent property.

	* nact/nact-tree-view.c (on_tree_view_realized):
	Delay all signal connection until the widget be actually realized.

	* src/nact/nact-sort-buttons.c (on_base_initialize_buttons):
	Delay the connection to the NactTreeView signal until we are sure the
	widget is realized.

	* src/nact/nact-main-window.c (on_base_initialize_gtk_toplevel):
	Delay the initialization of the NactTreeView until the Gtk toplevel has
	been loaded from XML Glade file.

	* src/nact/nact-assistant-export.c: Adapt to gtk3.

	* src/nact/nact-export-format.c (nact_export_format_init_display):
	Remove the useless intermediate GtkGrid.

	* src/nact/nact-assistant-export.ui: Let the format selection be scrolled.

	* src/core/na-gtk-utils.c (dump_children):
	Also dump the address of the child widget.
	Also dump children which do not have a name (dynamically allocated).

2011-11-26 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-tree-ieditable.c (do_insert_before): Re-reverse the list
	before returning so that the list returns as unchanged to the caller.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	Slightly optimize code.

	* src/core/na-importer.c (na_importer_import_from_list): Fix comments.

	* src/io-xml/naxml-reader.c (naxml_reader_import_from_uri): Do not return
	any error message if we do not identify at least a well-formed document
	with a known root node.

	* src/api/na-boxed.h:
	* src/api/na-timeout.h:
	* src/core/na-boxed.c:
	* src/core/na-data-boxed.c:
	* src/core/na-gconf-migration.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c: